# audio-stream

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  build.bat  build.sh  vcpkg.json
.github/workflows/: test.yml
docs/: index.html
docs/html/: README_8md.html  annotated.html  annotated_dup.js  audio__config_8hpp.html  audio__config_8hpp.js  audio__config_8hpp__dep__incl.map  audio__config_8hpp__dep__incl.md5  audio__config_8hpp__incl.map  audio__config_8hpp__incl.md5  audio__config_8hpp_source.html  audio__stream_8cpp.html  audio__stream_8cpp__incl.map  audio__stream_8cpp__incl.md5  audio__stream_8hpp.html  audio__stream_8hpp__dep__incl.map  audio__stream_8hpp__dep__incl.md5  audio__stream_8hpp__incl.map  audio__stream_8hpp__incl.md5  audio__stream_8hpp_source.html  audio__streamer_8cpp.html  audio__streamer_8cpp__incl.map  audio__streamer_8cpp__incl.md5  audio__streamer_8hpp.html  audio__streamer_8hpp.js  audio__streamer_8hpp__dep__incl.map  audio__streamer_8hpp__dep__incl.md5  audio__streamer_8hpp__incl.map  audio__streamer_8hpp__incl.md5  audio__streamer_8hpp_source.html  classAudioPlayer-members.html  classAudioPlayer.html  classAudioPlayer.js  classAudioPlayer__coll__graph.map  classAudioPlayer__coll__graph.md5  classAudioPlayer_a82b56a61bdeb8fdf45b221da7e921fac_icgraph.map  classAudioPlayer_a82b56a61bdeb8fdf45b221da7e921fac_icgraph.md5  classAudioPlayer_a9e821e93d405c0c2cc09eaeb6036f809_icgraph.map  classAudioPlayer_a9e821e93d405c0c2cc09eaeb6036f809_icgraph.md5  classAudioRecorder-members.html  classAudioRecorder.html  (+165 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+20 more)
src/: CMakeLists.txt  README.md  audio_config.hpp  audio_streamer.cpp  audio_streamer.hpp  connector.hpp  main.cpp  receiver.hpp  sender.hpp
src/audio_stream/: audio_config.hpp  audio_stream.cpp  audio_stream.hpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp
test/: CMakeLists.txt  connector_test.cpp
tests/: connector_test.cpp
